updating shoe campaign photo and captions

--- a/design.html
+++ b/design.html
@@ -48,7 +48,7 @@
       </div>
 
       <div class="col-lg-6 col-md-6 col-sm-12 col-xs-12">
-        <p class="annotation"><a href=""></a></p>
+        <p class="annotation">Campaign<a href=""></a></p>
         <p class=""><a href=""></a></p>
       </div>
     </div>
@@ -62,7 +62,7 @@
 
       <div class="col-lg-6 col-md-6 col-sm-12 col-xs-12">
         <p class="annotation"><a href=""></a></p>
-        <p class="">Book cover edited with Photoshop.<a href=""></a></p>
+        <p class="">Book cover<a href=""></a></p>
       </div>
     </div>
 
@@ -91,7 +91,7 @@
 
       <div class="col-lg-6 col-md-6 col-sm-12 col-xs-12">
         <p class="annotation"><a href=""></a></p>
-        <p class="">Logo for World Class Coffee Catering.<a href=""></a></p>
+        <p class="">Logo<a href=""></a></p>
       </div>
     </div>
 
@@ -104,7 +104,7 @@
 
       <div class="col-lg-6 col-md-6 col-sm-12 col-xs-12">
         <p class="annotation"><a href=""></a></p>
-        <p class="">Logo for World Class Coffee Catering.<a href=""></a></p>
+        <p class="">Logo<a href=""></a></p>
       </div>
     </div>
 
@@ -130,7 +130,7 @@
 
       <div class="col-lg-6 col-md-6 col-sm-12 col-xs-12">
         <p class="annotation"><a href=""></a></p>
-        <p class="">A collage I made for an experimental drawing class assignment.<a href=""></a></p>
+        <p class="">Collage<a href=""></a></p>
       </div>
     </div>
 
@@ -143,7 +143,7 @@
 
       <div class="col-lg-6 col-md-6 col-sm-12 col-xs-12">
         <p class="annotation"><a href=""></a></p>
-        <p class="">A figure drawing I did for a class assignment.<a href=""></a></p>
+        <p class="">Figure drawing<a href=""></a></p>
       </div>
     </div>
 
@@ -156,7 +156,7 @@
 
       <div class="col-lg-6 col-md-6 col-sm-12 col-xs-12">
         <p class="annotation"><a href=""></a></p>
-        <p class="">A figure drawing I did for a class assignment.<a href=""></a></p>
+        <p class="">Figure drawing<a href=""></a></p>
       </div>
     </div>
 
@@ -169,7 +169,7 @@
 
       <div class="col-lg-6 col-md-6 col-sm-12 col-xs-12">
         <p class="annotation"><a href=""></a></p>
-        <p class="">From here on down: a series of design-inspired photographs that I took.<a href=""></a></p>
+        <p class="">Photograph<a href=""></a></p>
       </div>
     </div>
 
@@ -182,7 +182,7 @@
 
       <div class="col-lg-6 col-md-6 col-sm-12 col-xs-12">
         <p class="annotation"><a href=""></a></p>
-        <p class=""><a href=""></a></p>
+        <p class="">Photograph<a href=""></a></p>
       </div>
     </div>
 
@@ -195,7 +195,7 @@
 
       <div class="col-lg-6">
         <p class="annotation"><a href=""></a></p>
-        <p class=""><a href="#"></a></p>
+        <p class="">Photograph<a href="#"></a></p>
       </div>
     </div>
 
@@ -208,7 +208,7 @@
 
       <div class="col-lg-6 col-md-6 col-sm-12 col-xs-12">
         <p class="annotation"><a href=""></a></p>
-        <p class=""><a href=""></a></p>
+        <p class="">Photograph<a href=""></a></p>
       </div>
     </div>
 
@@ -234,7 +234,7 @@
 
       <div class="col-lg-6 col-md-6 col-sm-12 col-xs-12">
         <p class="annotation"><a href=""></a></p>
-        <p class=""><a href=""></a></p>
+        <p class="">Photograph<a href=""></a></p>
       </div>
     </div>
 
@@ -247,7 +247,7 @@
 
       <div class="col-lg-6">
         <p class="annotation"><a href=""></a></p>
-        <p class=""><a href="#"></a></p>
+        <p class="">Photograph<a href="#"></a></p>
       </div>
     </div>
 
