adding new tab attr to all links

--- a/design.html
+++ b/design.html
@@ -42,7 +42,7 @@
 
     <div id="content" class="row col-lg-offset-3 col-md-offset-3 col-lg-9 col-md-9 col-sm-12 col-xs-12">
       <div class="col-lg-6 col-md-6 col-sm-12 col-xs-12">
-        <a href="">
+        <a target="_blank" href="">
           <img class="artdesign" src="/images/rain_snow_or_fog_2_page_full_no_logo.jpg" style="">
         </a>
       </div>
@@ -55,7 +55,7 @@
 
     <div id="content" class="row col-lg-offset-3 col-md-offset-3 col-lg-9 col-md-9 col-sm-12 col-xs-12">
       <div class="col-lg-6 col-md-6 col-sm-12 col-xs-12">
-        <a href="/images/artdesign_fullsize/oncuecover5.jpg">
+        <a target="_blank" href="/images/artdesign_fullsize/oncuecover5.jpg">
           <img class="artdesign" src="/images/oncuecover5_min.jpg" style="">
         </a>
       </div>
@@ -66,26 +66,10 @@
       </div>
     </div>
 
-    <!-- <div id="content" class="row col-lg-offset-3 col-md-offset-3 col-lg-9 col-md-9 col-sm-12 col-xs-12">
-      <div class="col-lg-6">
-        <a href="/images/artdesign_fullsize/noexitcover.jpg">
-          <img src="/images/noexitcover_mini.jpg" style="">
-        </a>
-        <a href="/images/artdesign_fullsize/noexitcover2.jpg">
-          <img src="/images/noexitcover2_mini.jpg" style="">
-        </a>
-      </div>
-
-      <div class="col-lg-6">
-        <p class="annotation"><a href=""></a></p>
-        <p class=""><a href=""></a></p>
-      </div>
-    </div> -->
-
     <div id="content" class="row col-lg-offset-3 col-md-offset-3 col-lg-9 col-md-9 col-sm-12 col-xs-12">
       <div class="col-lg-6 col-md-6 col-sm-12 col-xs-12">
         <a href="/images/artdesign_fullsize/wccccatering.png">
-          <img class="artdesign" src="/images/wccccatering_min.png" style="">
+          <img target="_blank" class="artdesign" src="/images/wccccatering_min.png" style="">
         </a>
       </div>
 
@@ -97,7 +81,7 @@
 
     <div id="content" class="row col-lg-offset-3 col-md-offset-3 col-lg-9 col-md-9 col-sm-12 col-xs-12">
       <div class="col-lg-6 col-md-6 col-sm-12 col-xs-12">
-        <a href="/images/artdesign_fullsize/wccccatering_brnz.png">
+        <a target="_blank" href="/images/artdesign_fullsize/wccccatering_brnz.png">
           <img class="artdesign" src="/images/wccccatering_brnz_min.png" style="">
         </a>
       </div>
@@ -108,22 +92,9 @@
       </div>
     </div>
 
-<!--     <div id="content" class="row col-lg-offset-3 col-md-offset-3 col-lg-9 col-md-9 col-sm-12 col-xs-12">
-      <div class="col-lg-6 col-md-6 col-sm-12 col-xs-12">
-        <a href="/images/artdesign_fullsize/wccclogoletters.png">
-          <img class="artdesign" src="/images/wccclogoletters_min.png" style="">
-        </a>
-      </div>
-
-      <div class="col-lg-6 col-md-6 col-sm-12 col-xs-12">
-        <p class="annotation"><a href=""></a></p>
-        <p class="">An iteration of a logo I created for World Class Coffee Catering.<a href=""></a></p>
-      </div>
-    </div> -->
-
     <div id="content" class="row col-lg-offset-3 col-md-offset-3 col-lg-9 col-md-9 col-sm-12 col-xs-12">
       <div class="col-lg-6 col-md-6 col-sm-12 col-xs-12">
-        <a href="/images/artdesign_fullsize/collage.jpg">
+        <a target="_blank" href="/images/artdesign_fullsize/collage.jpg">
           <img class="artdesign" src="/images/collage_min.jpg" style="">
         </a>
       </div>
@@ -136,7 +107,7 @@
 
     <div id="content" class="row col-lg-offset-3 col-md-offset-3 col-lg-9 col-md-9 col-sm-12 col-xs-12">
       <div class="col-lg-6 col-md-6 col-sm-12 col-xs-12">
-        <a href="/images/artdesign_fullsize/bw_figure_full.jpg">
+        <a target="_blank" href="/images/artdesign_fullsize/bw_figure_full.jpg">
           <img class="artdesign" src="/images/bw_figure_min.jpg" style="">
         </a>
       </div>
@@ -149,7 +120,7 @@
 
     <div id="content" class="row col-lg-offset-3 col-md-offset-3 col-lg-9 col-md-9 col-sm-12 col-xs-12">
       <div class="col-lg-6 col-md-6 col-sm-12 col-xs-12">
-        <a href="/images/artdesign_fullsize/bw_figure2_full.jpg">
+        <a target="_blank" href="/images/artdesign_fullsize/bw_figure2_full.jpg">
           <img class="artdesign" src="/images/bw_figure2_min.jpg" style="">
         </a>
       </div>
@@ -162,7 +133,7 @@
 
     <div id="content" class="row col-lg-offset-3 col-md-offset-3 col-lg-9 col-md-9 col-sm-12 col-xs-12">
       <div class="col-lg-6 col-md-6 col-sm-12 col-xs-12">
-        <a href="">
+        <a target="_blank" href="">
           <img class="artdesign" src="/images/otherart/foglights.jpg" style="">
         </a>
       </div>
@@ -175,7 +146,7 @@
 
     <div id="content" class="row col-lg-offset-3 col-md-offset-3 col-lg-9 col-md-9 col-sm-12 col-xs-12">
       <div class="col-lg-6 col-md-6 col-sm-12 col-xs-12">
-        <a href="">
+        <a target="_blank" href="">
           <img class="artdesign" src="/images/otherart/windows.jpg" style="">
         </a>
       </div>
@@ -188,7 +159,7 @@
 
     <div id="content" class="row col-lg-offset-3 col-md-offset-3 col-lg-9 col-md-9 col-sm-12 col-xs-12">
       <div class="col-lg-6 col-md-6 col-sm-12 col-xs-12">
-        <a href="">
+        <a target="_blank" href="">
           <img class="artdesign" src="/images/otherart/car.jpg" style="">
         </a>
       </div>
@@ -201,7 +172,7 @@
 
     <div id="content" class="row col-lg-offset-3 col-md-offset-3 col-lg-9 col-md-9 col-sm-12 col-xs-12">
       <div class="col-lg-6 col-md-6 col-sm-12 col-xs-12">
-        <a href="">
+        <a target="_blank" href="">
           <img class="artdesign" src="/images/otherart/operawater.jpg" style="">
         </a>
       </div>
@@ -212,22 +183,9 @@
       </div>
     </div>
 
-<!--     <div id="content" class="row col-lg-offset-3 col-md-offset-3 col-lg-9 col-md-9 col-sm-12 col-xs-12">
-      <div class="col-lg-6 col-md-6 col-sm-12 col-xs-12">
-        <a href="">
-          <img class="artdesign" src="/images/otherart/playgroundwater.jpg" style="">
-        </a>
-      </div>
-
-      <div class="col-lg-6 col-md-6 col-sm-12 col-xs-12">
-        <p class="annotation"><a href=""></a></p>
-        <p class=""><a href=""></a></p>
-      </div>
-    </div> -->
-
     <div id="content" class="row col-lg-offset-3 col-md-offset-3 col-lg-9 col-md-9 col-sm-12 col-xs-12">
       <div class="col-lg-6 col-md-6 col-sm-12 col-xs-12">
-        <a href="">
+        <a target="_blank" href="">
           <img class="artdesign" src="/images/otherart/poolslide.jpg" style="">
         </a>
       </div>
@@ -240,7 +198,7 @@
 
     <div id="content" class="row col-lg-offset-3 col-md-offset-3 col-lg-9 col-md-9 col-sm-12 col-xs-12">
       <div class="col-lg-6 col-md-6 col-sm-12 col-xs-12">
-        <a href="">
+        <a target="_blank" href="">
           <img class="artdesign" src="/images/otherart/utilitypole.jpg" style="">
         </a>
       </div>
