--- a/web.html
+++ b/web.html
@@ -44,93 +44,93 @@
     <!-- add a mobile-responsive png-->
     <div id="content" class="row col-lg-offset-3 col-md-offset-3 col-lg-9 col-md-9">
       <div class="col-lg-6 col-md-6 col-sm-12 col-xs-12">
-        <a href="https://sandbox.ifma.org">
+        <a target="_blank" href="https://sandbox.ifma.org">
           <img class="image" src="/images/med/sandbox.ifma_med.png">
         </a>
       </div>
 
       <div class="col-lg-6 col-md-6 col-sm-12 col-xs-12">
-        <p class="annotation"><a href="https://sandbox.ifma.org">One</a> of a series (<a href="https://it.ifma.org">1</a>, <a href="https://omhs.ifma.org">2</a>, <a href="https://nola.org">3</a>...) of WordPress sites I set up and designed for Houston non-profit IFMA.</p>
+        <p class="annotation"><a target="_blank" href="https://sandbox.ifma.org">One</a> of a series (<a target="_blank" href="https://it.ifma.org">1</a>, <a target="_blank" href="https://omhs.ifma.org">2</a>, <a target="_blank" href="https://nola.org">3</a>...) of WordPress sites I set up and designed for Houston non-profit IFMA.</p>
       </div>
     </div>
 
     <div id="content" class="row col-lg-offset-3 col-md-offset-3 col-lg-9 col-md-9">
       <div class="col-lg-6 col-md-6 col-sm-12 col-xs-12">
-        <a href="https://angularjsdemoapp.herokuapp.com">
+        <a target="_blank" href="https://angularjsdemoapp.herokuapp.com">
           <img class="image" src="/images/med/angularjsdemoapp.png">
         </a>
       </div>
 
       <div class="col-lg-6 col-md-6 col-sm-12 col-xs-12">
-        <p class="annotation">To-do list SPA (<a href="https://angularjsdemoapp.herokuapp.com">Single page application</a>) made with Angular.js.</p>
-        <p class="">Source code & documentation: <a href="https://github.com/pchubinskiy/angular_to_do_list">angular_to_do_list</a></p>
+        <p class="annotation">To-do list SPA (<a target="_blank" href="https://angularjsdemoapp.herokuapp.com">Single page application</a>) made with Angular.js.</p>
+        <p class="">Source code & documentation: <a target="_blank" href="https://github.com/pchubinskiy/angular_to_do_list">angular_to_do_list</a></p>
       </div>
     </div>
 
     <div id="content" class="row col-lg-offset-3 col-md-offset-3 col-lg-9 col-md-9">
       <div class="col-lg-6 col-md-6 col-sm-12 col-xs-12">
-        <a href="http://lastichecked.herokuapp.com/">
+        <a target="_blank" href="http://lastichecked.herokuapp.com/">
           <img class="image" src="/images/med/lastichecked.png">
         </a>
       </div>
 
       <div class="col-lg-6 col-md-6 col-sm-12 col-xs-12">
-        <p class="annotation"><a href="http://lastichecked.herokuapp.com/">Final Project</a> I made using Last.fm's API and D3.js for week 12/12 of a web development course (WDI).</p>
-        <p class="">Source code & documentation: <a href="https://github.com/pchubinskiy/wdi3_final_project">wdi3_final_project</a></p>
+        <p class="annotation"><a target="_blank" href="http://lastichecked.herokuapp.com/">Final Project</a> I made using Last.fm's API and D3.js for week 12/12 of a web development course (WDI).</p>
+        <p class="">Source code & documentation: <a target="_blank" href="https://github.com/pchubinskiy/wdi3_final_project">wdi3_final_project</a></p>
       </div>
     </div>
 
     <div id="content" class="row col-lg-offset-3 col-md-offset-3 col-lg-9 col-md-9">
       <div class="col-lg-6 col-md-6 col-sm-12 col-xs-12">
-        <a href="https://w09wdiproj.herokuapp.com/">
+        <a target="_blank" href="https://w09wdiproj.herokuapp.com/">
           <img class="image" src="/images/med/w09_wdiproj3.png">
         </a>
       </div>
 
       <div class="col-lg-6 col-md-6 col-sm-12 col-xs-12">
-        <p class="annotation">Real-time, full-stack Node.js <a href="https://w09wdiproj.herokuapp.com/">survey application</a> I made during week 09/12 of WDI.</p>
+        <p class="annotation">Real-time, full-stack Node.js <a target="_blank" href="https://w09wdiproj.herokuapp.com/">survey application</a> I made during week 09/12 of WDI.</p>
         <p>Source code & documentation:
-          <a href="https://github.com/pchubinskiy/w09_wdiproj">w09_wdiproj</a>
+          <a target="_blank" href="https://github.com/pchubinskiy/w09_wdiproj">w09_wdiproj</a>
         </p>
       </div>
     </div>
 
     <div id="content" class="row col-lg-offset-3 col-md-offset-3 col-lg-9 col-md-9">
       <div class="col-lg-6 col-md-6 col-sm-12 col-xs-12">
-        <a href="http://pantrydotio.herokuapp.com/">
+        <a target="_blank" href="http://pantrydotio.herokuapp.com/">
           <img class="image" src="/images/med/pantry.io.png">
         </a>
       </div>
 
       <div class="col-lg-6 col-md-6 col-sm-12 col-xs-12">
-        <p class="annotation">Full-stack leftovers-to-recipe-recommendation <a href="http://pantrydotio.herokuapp.com/">Rails app</a> made for a group project during week 06/12 of WDI.</p>
-        <p class="">Source code & documentation: <a href="https://github.com/pchubinskiy/pantry">pantry</a></p>
+        <p class="annotation">Full-stack leftovers-to-recipe-recommendation <a target="_blank" href="http://pantrydotio.herokuapp.com/">Rails app</a> made for a group project during week 06/12 of WDI.</p>
+        <p class="">Source code & documentation: <a target="_blank" href="https://github.com/pchubinskiy/pantry">pantry</a></p>
       </div>
     </div>
 
     <div id="content" class="row col-lg-offset-3 col-md-offset-3 col-lg-9 col-md-9">
       <div class="col-lg-6 col-md-6 col-sm-12 col-xs-12">
-        <a href="https://tttcmyk.pancakeapps.com/">
+        <a target="_blank" href="https://tttcmyk.pancakeapps.com/">
           <img class="image" src="/images/med/tttcmyk.png">
         </a>
       </div>
 
       <div class="col-lg-6 col-md-6 col-sm-12 col-xs-12">
-        <p class="annotation">Vanilla JS <a href="https://tttcmyk.pancakeapps.com/">Tic-tac-toe app</a> I made during week 03/12 of WDI.</p>
-        <p>Source code & documentation: <a href="https://github.com/pchubinskiy/tictactoe_nonrefactored">tictactoe_nonrefactored</a></p>
+        <p class="annotation">Vanilla JS <a target="_blank" href="https://tttcmyk.pancakeapps.com/">Tic-tac-toe app</a> I made during week 03/12 of WDI.</p>
+        <p>Source code & documentation: <a target="_blank" href="https://github.com/pchubinskiy/tictactoe_nonrefactored">tictactoe_nonrefactored</a></p>
       </div>
     </div>
 
     <div id="content" class="row col-lg-offset-3 col-md-offset-3 col-lg-9 col-md-9">
       <div class="col-lg-6 col-md-6 col-sm-12 col-xs-12">
-        <a href="http://www.lrngo.com/coolstuff">
+        <a target="_blank" href="http://www.lrngo.com/coolstuff">
           <img class="imageNoBorder" src="/images/lrngo_landing_pages/med/lrngo_desktop_and_mobile.png">
         </a>
       </div>
 
       <div class="col-lg-6 col-md-6 col-sm-12 col-xs-12">
         <p class="annotation">
-          <p><a href="http://www.lrngo.com/coolstuff">One of many</a> landing pages I designed for Houston edtech start-up Lrngo.</p>
+          <p><a target="_blank" href="http://www.lrngo.com/coolstuff">One of many</a> landing pages I designed for Houston edtech start-up Lrngo.</p>
         </p>
       </div>
     </div>
