--- a/contact.html
+++ b/contact.html
@@ -46,8 +46,8 @@
 
   <div id="content" class="col-lg-offset-4 col-md-offset-4 col-lg-6 col-md-6 col-sm-11 col-xs-11">
     <p>email: <a href="mailto:pchubinskiy@gmail.com">pchubinskiy@gmail.com</a></p>
-    <p>LinkedIn: <a href="https://www.linkedin.com/in/pchubinskiy">https://www.linkedin.com/in/pchubinskiy</a></p>
-    <p>Github: <a href="https://github.com/pchubinskiy">pchubinskiy</a></p>
+    <p>LinkedIn: <a target="_blank" href="https://www.linkedin.com/in/pchubinskiy">https://www.linkedin.com/in/pchubinskiy</a></p>
+    <p>Github: <a target="_blank" href="https://github.com/pchubinskiy">pchubinskiy</a></p>
     <p>Copyright notice: All art and design copyright Pavlo Chubinskiy &copy;</p>
     <br>
     <br>
