--- a/design.html
+++ b/design.html
@@ -42,7 +42,7 @@
 
     <div id="content" class="row col-lg-offset-3 col-md-offset-3 col-lg-9 col-md-9 col-sm-12 col-xs-12">
       <div class="col-lg-6 col-md-6 col-sm-12 col-xs-12">
-        <a target="_blank" href="">
+        <a target="_blank" href="/images/artdesign_fullsize/rain_snow_or_fog_2_page_full_no_logo.jpg">
           <img class="artdesign" src="/images/rain_snow_or_fog_2_page_full_no_logo.jpg" style="">
         </a>
       </div>
@@ -55,8 +55,8 @@
 
     <div id="content" class="row col-lg-offset-3 col-md-offset-3 col-lg-9 col-md-9 col-sm-12 col-xs-12">
       <div class="col-lg-6 col-md-6 col-sm-12 col-xs-12">
-        <a target="_blank" href="/images/artdesign_fullsize/oncuecover5.jpg">
-          <img class="artdesign" src="/images/oncuecover5_min.jpg" style="">
+        <a target="_blank" href="/images/artdesign_fullsize/open_city_cover_square.jpg">
+          <img class="artdesign" src="/images/open_city_cover_square.jpg" style="">
         </a>
       </div>
 
@@ -68,8 +68,8 @@
 
     <div id="content" class="row col-lg-offset-3 col-md-offset-3 col-lg-9 col-md-9 col-sm-12 col-xs-12">
       <div class="col-lg-6 col-md-6 col-sm-12 col-xs-12">
-        <a href="/images/artdesign_fullsize/wccccatering.png">
-          <img target="_blank" class="artdesign" src="/images/wccccatering_min.png" style="">
+        <a href="/images/artdesign_fullsize/wccc_square.png">
+          <img target="_blank" class="artdesign" src="/images/wccc_square.png" style="">
         </a>
       </div>
 
@@ -81,8 +81,8 @@
 
     <div id="content" class="row col-lg-offset-3 col-md-offset-3 col-lg-9 col-md-9 col-sm-12 col-xs-12">
       <div class="col-lg-6 col-md-6 col-sm-12 col-xs-12">
-        <a target="_blank" href="/images/artdesign_fullsize/wccccatering_brnz.png">
-          <img class="artdesign" src="/images/wccccatering_brnz_min.png" style="">
+        <a target="_blank" href="/images/artdesign_fullsize/wccc_logo_serif_brnz.png">
+          <img class="artdesign" src="/images/wccc_logo_serif_brnz.png" style="">
         </a>
       </div>
 
