--- a/design.html
+++ b/design.html
@@ -68,8 +68,8 @@
 
     <div id="content" class="row col-lg-offset-3 col-md-offset-3 col-lg-9 col-md-9 col-sm-12 col-xs-12">
       <div class="col-lg-6 col-md-6 col-sm-12 col-xs-12">
-        <a href="/images/artdesign_fullsize/wccc_square.png">
-          <img target="_blank" class="artdesign" src="/images/wccc_square.png" style="">
+        <a href="/images/artdesign_fullsize/wccc_square.jpg">
+          <img target="_blank" class="artdesign" src="/images/wccc_square.jpg" style="">
         </a>
       </div>
 
@@ -81,8 +81,8 @@
 
     <div id="content" class="row col-lg-offset-3 col-md-offset-3 col-lg-9 col-md-9 col-sm-12 col-xs-12">
       <div class="col-lg-6 col-md-6 col-sm-12 col-xs-12">
-        <a target="_blank" href="/images/artdesign_fullsize/wccc_logo_serif_brnz.png">
-          <img class="artdesign" src="/images/wccc_logo_serif_brnz.png" style="">
+        <a target="_blank" href="/images/artdesign_fullsize/wccc_logo_serif_brnz.jpg">
+          <img class="artdesign" src="/images/wccc_logo_serif_brnz.jpg" style="">
         </a>
       </div>
 
