--- a/web.html
+++ b/web.html
@@ -33,7 +33,7 @@
   <div class="container">
     <div id="menubar" class="row col-lg-2 col-md-2 col-sm-2 col-xs-12">
       <p id="name">P. Chubinskiy</p>
-      <p><a href="index.html">About Me</a></p>
+      <p><a href="index.html">About</a></p>
       <p><a href="web.html">Web</a></p>
       <!--<p><a href="writing.html">Writing</a></p>-->
       <p><a href="design.html">Graphic Design</a></p>
