--- a/otherart.html
+++ b/otherart.html
@@ -32,7 +32,7 @@
 <body>
   <div id="menubar" class="col-xs-12 col-sm-12 col-md-3 col-lg-3">
     <p id="name">P. Chubinskiy</p>
-    <p><a href="index.html">About Me</a></p>
+    <p><a href="index.html">About</a></p>
     <p><a href="web.html">Web</a></p>
     <!--<p><a href="writing.html">Writing</a></p>-->
     <p><a href="design.html">Graphic Design</a></p>
