--- a/writing.html
+++ b/writing.html
@@ -31,7 +31,7 @@
 <body>
   <div id="menubar" class="col-lg-2 col-md-2 col-sm-2 col-xs-12">
     <p id="name">P. Chubinskiy</p>
-    <p><a href="index.html">About Me</a></p>
+    <p><a href="index.html">About</a></p>
     <p><a href="web.html">Web</a></p>
     <p><a href="design.html">Graphic Design</a></p>
     <p><a href="/pdfs/resume.pdf">Resume</a></p>
