updating bio/about page, deleting resume page link

--- a/index.html
+++ b/index.html
@@ -34,19 +34,21 @@
     <p id="name">Pavlo Chubinskiy</p>
     <p><a href="index.html">About</a></p>
     <p><a href="web.html">Web</a></p>
-    <!--<p><a href="writing.html">Writing</a></p>-->
     <p><a href="design.html">Graphic Design</a></p>
-    <p><a href="resume.html">Resume</a></p>
     <p><a href="contact.html">Contact</a></p>
   </div>
 
   <div class="col-lg-offset-3 col-md-offset-3 col-sm-offset-4 col-xs-offset-3 col-lg-1 col-md-1 col-sm-1 col-xs-1">
-      <div id="profile_background"></div>
-      <img id="profile" src="/images/profile.jpg">
+      <!-- <div id="profile_background"></div>
+      <img id="profile" src="/images/profile.jpg"> -->
   </div>
 
   <div id="content" class="col-xs-11 col-sm-11 col-md-6 col-md-offset-1 col-lg-6 col-lg-offset-1">
-    <p>Hi, I’m Pavlo. I’m a budding designer and a creative problem solver, and I like to work where education, design, and technology meet. On my free time, I enjoy watching sports, reading and writing, listening to music, and exercising. I also like to change what I put here.</p>
+    <p>
+      Currently available for freelance work.
+
+      I'm a graphic and visual designer based in Houston, TX, and my goal is to meaningfully communicate things visually and to facilitate interaction. I also have experience doing web development and teaching English. I enjoy sports, reading, music, and exercise, and I like to change what I put here. 
+    </p>
   </div>
 
   <script type="text/javascript" src="//code.jquery.com/jquery-2.2.0.min.js"></script>
