updating bio/about page, deleting resume page link

--- a/index.html
+++ b/index.html
@@ -48,7 +48,7 @@
       Currently available for freelance work.
       <br>
       <br>
-      I'm a graphic and visual designer based in Houston, TX, and my goal is to meaningfully communicate things visually and to facilitate interaction. I also have experience doing web development and teaching English. I enjoy sports, reading, music, and exercise, and I like to change what I put here. 
+      I was born in Ukraine and raised in Houston, TX. I received a B.A. in Literature from Duke University, and I have experience doing web development and teaching English.
     </p>
   </div>
 
