updating web and index pages

--- a/index.html
+++ b/index.html
@@ -45,10 +45,10 @@
 
   <div id="content" class="col-xs-11 col-sm-11 col-md-6 col-md-offset-1 col-lg-6 col-lg-offset-1">
     <p>
-      Currently available for freelance work.
+      Currently available for freelance development and design work.
       <br>
       <br>
-      I was born in Ukraine and raised in Houston, TX. I received a B.A. in Literature from Duke University, and I have experience doing web development and teaching English.
+      I was born in Ukraine and raised in Houston, TX. I received a B.A. in Literature from Duke University, and I have experience doing web development and teaching English. I also enjoy running intervals.
     </p>
   </div>
 
