--- a/web.html
+++ b/web.html
@@ -48,7 +48,7 @@
       </div>
 
       <div class="col-lg-6 col-md-6 col-sm-12 col-xs-12">
-        <p class="annotation"><a target="_blank" href="https://sandbox.ifma.org">One</a> of a series (<a target="_blank" href="https://it.ifma.org">1</a>, <a target="_blank" href="https://omhs.ifma.org">2</a>, <a target="_blank" href="https://nola.org">3</a>...) of WordPress sites I set up and designed for Houston non-profit IFMA.</p>
+        <p class="annotation"><a target="_blank" href="https://sandbox.ifma.org">One</a> of a series (<a target="_blank" href="https://it.ifma.org">1</a>, <a target="_blank" href="https://omhs.ifma.org">2</a>, <a target="_blank" href="https://nola.org">3</a>...) of WordPress sites I set up and designed while contracting for Houston non-profit IFMA.</p>
       </div>
     </div>
 
@@ -73,7 +73,7 @@
       </div>
 
       <div class="col-lg-6 col-md-6 col-sm-12 col-xs-12">
-        <p class="annotation"><a target="_blank" href="http://lastichecked.herokuapp.com/">Final Project</a> I made using Last.fm's API and D3.js for week 12/12 of a web development course (WDI).</p>
+        <p class="annotation"><a target="_blank" href="http://lastichecked.herokuapp.com/">Final Project</a> I made using Last.fm's API and D3.js for week 12/12 of a web development course at GA.</p>
         <p class="">Source code & documentation: <a target="_blank" href="https://github.com/pchubinskiy/wdi3_final_project">wdi3_final_project</a></p>
       </div>
     </div>
@@ -86,7 +86,7 @@
       </div>
 
       <div class="col-lg-6 col-md-6 col-sm-12 col-xs-12">
-        <p class="annotation">Real-time, full-stack Node.js <a target="_blank" href="https://w09wdiproj.herokuapp.com/">survey application</a> I made during week 09/12 of WDI.</p>
+        <p class="annotation">Real-time, full-stack Node.js <a target="_blank" href="https://w09wdiproj.herokuapp.com/">survey application</a> I made during week 09/12 of a web development course at GA.</p>
         <p>Source code & documentation:
           <a target="_blank" href="https://github.com/pchubinskiy/w09_wdiproj">w09_wdiproj</a>
         </p>
@@ -101,7 +101,7 @@
       </div>
 
       <div class="col-lg-6 col-md-6 col-sm-12 col-xs-12">
-        <p class="annotation">Full-stack leftovers-to-recipe-recommendation <a target="_blank" href="http://pantrydotio.herokuapp.com/">Rails app</a> made for a group project during week 06/12 of WDI.</p>
+        <p class="annotation">Full-stack leftovers-to-recipe-recommendation <a target="_blank" href="http://pantrydotio.herokuapp.com/">Rails app</a> made for a group project during week 06/12 of a web development course at GA.</p>
         <p class="">Source code & documentation: <a target="_blank" href="https://github.com/pchubinskiy/pantry">pantry</a></p>
       </div>
     </div>
@@ -114,7 +114,7 @@
       </div>
 
       <div class="col-lg-6 col-md-6 col-sm-12 col-xs-12">
-        <p class="annotation">Vanilla JS <a target="_blank" href="https://tttcmyk.pancakeapps.com/">Tic-tac-toe app</a> I made during week 03/12 of WDI.</p>
+        <p class="annotation">Vanilla JS <a target="_blank" href="https://tttcmyk.pancakeapps.com/">Tic-tac-toe app</a> I made during week 03/12 of a web development course at GA.</p>
         <p>Source code & documentation: <a target="_blank" href="https://github.com/pchubinskiy/tictactoe_nonrefactored">tictactoe_nonrefactored</a></p>
       </div>
     </div>
