--- a/index.html
+++ b/index.html
@@ -48,7 +48,7 @@
       Currently available for freelance web development and design work.
       <br>
       <br>
-      I was born in Ukraine and raised in Houston, TX. I received a B.A. in Literature, and I have experience teaching English. I also enjoy running intervals.
+      I was raised in the US but born overseas. I received a B.A. in Literature, and I have experience teaching English. I also enjoy running intervals.
     </p>
   </div>
 
