--- a/otherart.html
+++ b/otherart.html
@@ -46,7 +46,7 @@
       </div>
 
       <div class="col-lg-6 col-md-6 col-sm-12 col-xs-12">
-        <p class="annotation"><a href=""></a></p>
+        <p class="annotation">Business card template.<a href=""></a></p>
         <p class=""><a href=""></a></p>
       </div>
     </div>
