--- a/web.html
+++ b/web.html
@@ -31,7 +31,7 @@
 </head>
 <body>
   <div class="container">
-    <div id="menubar" class="row col-lg-2 col-md-2 col-sm-2 col-xs-12">
+    <div id="menubar" class="col-xs-12 col-sm-12 col-md-3 col-lg-3">
       <p id="name">P. Chubinskiy</p>
       <p><a href="index.html">About</a></p>
       <p><a href="web.html">Web</a></p>
