adding wimbledon woodworks logo

--- a/design.html
+++ b/design.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-  <title>Art & Design</title>
+  <title>Design</title>
   <link href="/stylesheets/wdiexercise.css" rel="stylesheet">
   <link href="/stylesheets/artdesign.css" rel="stylesheet">
 
@@ -41,6 +41,19 @@
 
     <div id="content" class="row col-lg-offset-3 col-md-offset-3 col-lg-9 col-md-9 col-sm-12 col-xs-12">
       <div class="col-lg-6 col-md-6 col-sm-12 col-xs-12">
+        <a target="_blank" href="/images/artdesign_fullsize/wimbledon_woodworks_1.jpg">
+          <img class="artdesign" src="/images/wimbledon_woodworks_1.jpg" style="">
+        </a>
+      </div>
+
+      <div class="col-lg-6 col-md-6 col-sm-12 col-xs-12">
+        <p class="annotation">Logo<a href=""></a></p>
+        <p class=""><a href=""></a></p>
+      </div>
+    </div>
+
+    <div id="content" class="row col-lg-offset-3 col-md-offset-3 col-lg-9 col-md-9 col-sm-12 col-xs-12">
+      <div class="col-lg-6 col-md-6 col-sm-12 col-xs-12">
         <a target="_blank" href="/images/artdesign_fullsize/rain_snow_or_fog_2_page_full_no_logo.jpg">
           <img class="artdesign" src="/images/rain_snow_or_fog_2_page_full_no_logo.jpg" style="">
         </a>
@@ -48,6 +61,19 @@
 
       <div class="col-lg-6 col-md-6 col-sm-12 col-xs-12">
         <p class="annotation">Campaign<a href=""></a></p>
+        <p class=""><a href=""></a></p>
+      </div>
+    </div>
+
+    <div id="content" class="row col-lg-offset-3 col-md-offset-3 col-lg-9 col-md-9 col-sm-12 col-xs-12">
+      <div class="col-lg-6 col-md-6 col-sm-12 col-xs-12">
+        <a target="_blank" href="/images/artdesign_fullsize/open_city_cover_square.jpg">
+          <img class="artdesign" src="/images/open_city_cover_square.jpg" style="">
+        </a>
+      </div>
+
+      <div class="col-lg-6 col-md-6 col-sm-12 col-xs-12">
+        <p class="annotation">Book cover<a href=""></a></p>
         <p class=""><a href=""></a></p>
       </div>
     </div>
