--- a/otherart.html
+++ b/otherart.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-  <title>Art & Design</title>
+  <title>Other Art and In Progress Design</title>
   <link href="/stylesheets/wdiexercise.css" rel="stylesheet">
   <link href="/stylesheets/artdesign.css" rel="stylesheet">
 
@@ -37,6 +37,19 @@
     <p><a href="design.html">Graphic Design</a></p>
     <p><a href="contact.html">Contact</a></p>
   </div>
+
+    <div id="content" class="row col-lg-offset-3 col-md-offset-3 col-lg-9 col-md-9 col-sm-12 col-xs-12">
+      <div class="col-lg-6 col-md-6 col-sm-12 col-xs-12">
+        <a target="_blank" href="/images/artdesign_fullsize/wimbledon_woodworks_2.jpg">
+          <img class="artdesign" src="/images/wimbledon_woodworks_2.jpg" style="">
+        </a>
+      </div>
+
+      <div class="col-lg-6 col-md-6 col-sm-12 col-xs-12">
+        <p class="annotation">Logo<a href=""></a></p>
+        <p class=""><a href=""></a></p>
+      </div>
+    </div>
 
     <div id="content" class="row col-lg-offset-3 col-md-offset-3 col-lg-9 col-md-9 col-sm-12 col-xs-12">
       <div class="col-lg-6 col-md-6 col-sm-12 col-xs-12">
