--- a/design.html
+++ b/design.html
@@ -41,6 +41,19 @@
 
     <div id="content" class="row col-lg-offset-3 col-md-offset-3 col-lg-9 col-md-9 col-sm-12 col-xs-12">
       <div class="col-lg-6 col-md-6 col-sm-12 col-xs-12">
+        <a target="_blank" href="/images/artdesign_fullsize/canva_awards_1.jpg">
+          <img class="artdesign" src="/images/canva_awards_1.jpg" style="">
+        </a>
+      </div>
+
+      <div class="col-lg-6 col-md-6 col-sm-12 col-xs-12">
+        <p class="annotation">Logo<a href=""></a></p>
+        <p class=""><a href=""></a></p>
+      </div>
+    </div>
+
+    <div id="content" class="row col-lg-offset-3 col-md-offset-3 col-lg-9 col-md-9 col-sm-12 col-xs-12">
+      <div class="col-lg-6 col-md-6 col-sm-12 col-xs-12">
         <a target="_blank" href="/images/artdesign_fullsize/wimbledon_woodworks_1.jpg">
           <img class="artdesign" src="/images/wimbledon_woodworks_1.jpg" style="">
         </a>
