--- a/otherart.html
+++ b/otherart.html
@@ -40,8 +40,8 @@
 
     <div id="content" class="row col-lg-offset-3 col-md-offset-3 col-lg-9 col-md-9 col-sm-12 col-xs-12">
       <div class="col-lg-6 col-md-6 col-sm-12 col-xs-12">
-        <a target="_blank" href="/images/artdesign_fullsize/canva_award_2.jpg">
-          <img class="artdesign" src="/images/canva_award_2.jpg" style="">
+        <a target="_blank" href="/images/artdesign_fullsize/canva_award_2.png">
+          <img class="artdesign" src="/images/canva_award_2.png" style="">
         </a>
       </div>
 
