--- a/test.html
+++ b/test.html
@@ -2,7 +2,7 @@
 <head>
     <title>test</title>
 <script type="text/javascript">
-window.SetInterval(function() {
+window.setInterval(function() {
     document.write("hello.");
 }, 1000);
 </script>
@@ -11,7 +11,7 @@ window.SetInterval(function() {
 
 
 <script type="text/javascript">
-window.SetInterval(function() {
+window.setInterval(function() {
     document.write("hello.");
 }, 1000);
 </script>
