--- a/restructuring.html
+++ b/restructuring.html
@@ -235,8 +235,11 @@
                 [0, 0, 0, 0, 0, 0, 0, 0],
                 [0, 0, 0, 0, 0, 0, 0, 0]];
 
+    alert("before function");
+
     function changeTile() {
 
+        alert("beginning of function");
         var random = Math.random();
 
         if ((.1 > random > 0) && (tile1x1.src == defaultsrc || tile1x2.src == defaultsrc || tile1x3.src == defaultsrc || tile1x4.src == defaultsrc || tile1x5.src == defaultsrc || tile1x6.src == defaultsrc || tile1x7.src == defaultsrc || tile1x8.src == defaultsrc)) { 
@@ -900,10 +903,8 @@
     window.setInterval(function() {
         changeTile();
     }, 300);
-
-    alert("end of JS");
 </script>
-<script src="./restructuring.js"  type="text/javascript"></script>
+<!-- <script src="./restructuring.js"  type="text/javascript"></script> -->
 </body>
 
 </html>
