--- a/restructuring.html
+++ b/restructuring.html
@@ -241,6 +241,7 @@
 
         alert("beginning of function");
         var random = Math.random();
+        console.log(random " is random");
 
         if (true) { 
             alert("inside step one of function");
