--- a/restructuring.html
+++ b/restructuring.html
@@ -220,9 +220,9 @@
     var tile10x7 = document.getElementById("white10x7");
     var tile10x8 = document.getElementById("white10x8");
 
-    var defaultsrc = "/images/otherart/restructuring/10x8/white_tile.png";
-    var putin_tile = "/images/otherart/restructuring/10x8/putin10x8/putin_crop [www.imagesplitter.net]-";
-    var trump_tile = "/images/otherart/restructuring/10x8/trump10x8/trump_crop [www.imagesplitter.net]-";
+    var defaultsrc = "http://pchubinskiy.com/images/otherart/restructuring/10x8/white_tile.png";
+    var putin_tile = "http://pchubinskiy.com/images/otherart/restructuring/10x8/putin10x8/putin_crop [www.imagesplitter.net]-";
+    var trump_tile = "http://pchubinskiy.com/images/otherart/restructuring/10x8/trump10x8/trump_crop [www.imagesplitter.net]-";
 
     var arr = [[0, 0, 0, 0, 0, 0, 0, 0], 
                 [0, 0, 0, 0, 0, 0, 0, 0],
