--- a/restructuring.html
+++ b/restructuring.html
@@ -130,6 +130,11 @@
     <img id="white10x8" class="tile" src="/images/otherart/restructuring/10x8/white_tile.png">
 </div>
 
+<div class="label">
+    <span style="font-style: italic;">Perestroika (Restructuring)</span><span>, 2017</span>
+    <span>1800 x 2381 pixels.</span>
+</div>
+
 <script type="text/javascript">
     var tile1x1 = document.getElementById("white1x1");
     var tile1x2 = document.getElementById("white1x2");
