--- a/restructuring.html
+++ b/restructuring.html
@@ -131,8 +131,8 @@
 </div>
 
 <div class="label">
-    <span style="font-style: italic;">Perestroika (Restructuring)</span><span>, 2017</span>
-    <span>1800 x 2381 pixels.</span>
+    <span style="margin-left: 120px; display: block; font-style: italic;">Perestroika (Restructuring)</span><span>, 2017</span>
+    <span style="margin-left: 120px; display: block;">1800 x 2381 pixels.</span>
 </div>
 
 <script type="text/javascript">
