--- a/restructuring.html
+++ b/restructuring.html
@@ -131,7 +131,7 @@
 </div>
 
 <div class="label">
-    <span style="margin-left: 120px; display: block; font-style: italic;">Perestroika (Restructuring)</span><span>, 2017</span>
+    <span style="margin-left: 120px; display: block;"><span style="font-style: italic;">Perestroika (Restructuring)</span>, 2017</span>
     <span style="margin-left: 120px; display: block;">1800 x 2381 pixels.</span>
 </div>
 
