--- a/restructuring.html
+++ b/restructuring.html
@@ -132,7 +132,7 @@
 
 <div class="label">
     <span style="margin-top: 50px; margin-left: 100px; display: block;"><span style="font-style: italic;">Perestroika (Restructuring)</span>, 2017</span>
-    <span style="margin-top: 50px; margin-left: 100px; display: block;">1800 x 2381 pixels.</span>
+    <span style="margin-left: 100px; display: block;">1800 x 2381 pixels.</span>
 </div>
 
 <script type="text/javascript">
