--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-  <title>Pavlo Chubinskiy's Portfolio</title>
+  <title>Paul Chubinskiy's Portfolio</title>
   <link href="/stylesheets/wdiexercise.css" rel="stylesheet">
 
   <meta charset="utf-8">
