changing artwork name

--- a/restructuring.html
+++ b/restructuring.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
 <head>
-    <title>Perestroika (Restructuring)</title>
+    <title>Reinauguration Portrait</title>
 
 <style type="text/css">
 
@@ -131,7 +131,7 @@
 </div>
 
 <div class="label">
-    <span style="margin-top: 50px; margin-left: 90px; display: block;"><span style="font-style: italic;">Perestroika (Restructuring)</span>, 2017</span>
+    <span style="margin-top: 50px; margin-left: 90px; display: block;"><span style="font-style: italic;">Reinauguration Portrait</span>, 2017</span>
     <span style="margin-left: 90px; display: block;">1800 x 2381 pixels.</span>
 </div>
 
