updating web project desc

--- a/web.html
+++ b/web.html
@@ -86,7 +86,7 @@
       </div>
 
       <div class="col-lg-6 col-md-6 col-sm-12 col-xs-12">
-        <p class="annotation">Real-time, full-stack Node.js <a target="_blank" href="https://w09wdiproj.herokuapp.com/">survey application</a> made with LESS CSS during week 09/12 of a web development course.</p>
+        <p class="annotation">Real-time, full-stack Node.js <a target="_blank" href="https://w09wdiproj.herokuapp.com/">survey application</a> made with Less CSS during week 09/12 of a web development course.</p>
         <p>Source code & documentation:
           <a target="_blank" href="https://github.com/pchubinskiy/w09_wdiproj">w09_wdiproj</a>
         </p>
