--- a/restructuring.html
+++ b/restructuring.html
@@ -2,20 +2,10 @@
 <html>
 <head>
     <title>Reinauguration Portrait</title>
-
-<style type="text/css">
-
-.tile {
-    height: 100px;
-    width: 100px;
-    margin: 0px -5px -5px 0px;
-}
-
-.row {
-    display: block;
-    margin-left: 90px;
-}
-</style>
+    <!-- less -->
+    <script src="//cdnjs.cloudflare.com/ajax/libs/less.js/2.7.2/less.min.js"></script>
+    <link rel="stylesheet" type="text/css" href="/stylesheets/restructuring.css">
+    <!-- less -->
 </head>
 
 <body>
