--- a/restructuring2.html
+++ b/restructuring2.html
@@ -258,8 +258,7 @@
         var random = Math.random();
 
         if ((.1 > random > 0) && (arr[0].every(isZero)) { 
-            if (.125 > Math.random() > 0)
-            { 
+            if (.125 > Math.random() > 0) { 
                 if (Math.random() > .5) {
                     tile1x1.src = putin_tile + "0-0.png";
                     arr[0][0] = "p";
