--- a/restructuring2.html
+++ b/restructuring2.html
@@ -217,8 +217,8 @@
     var tile10x8 = document.getElementById("white10x8");
 
     var defaultsrc = "http://pchubinskiy.com/images/otherart/restructuring/10x8/white_tile.png";
-    var putin_tile = "http://pchubinskiy.com/images/otherart/restructuring/10x8/putin10x8/putin_crop [www.imagesplitter.net]-";
     var trump_tile = "http://pchubinskiy.com/images/otherart/restructuring/10x8/trump10x8/trump_crop [www.imagesplitter.net]-";
+    var putin_tile = "http://pchubinskiy.com/images/otherart/restructuring/10x8/putin10x8/putin_crop [www.imagesplitter.net]-";
 
     var arr = [[0, 0, 0, 0, 0, 0, 0, 0], 
                 [0, 0, 0, 0, 0, 0, 0, 0],
@@ -251,6 +251,14 @@
 
     function isZero(element, index, array) {
         return element == 0;
+    }
+
+    function isT(element, index, array) {
+        return element == "t";
+    }
+
+    function isP(element, index, array) {
+        return element == "p";
     }
 
     function changeTile() {
