--- a/restructuring2.html
+++ b/restructuring2.html
@@ -265,7 +265,7 @@
 
         var random = Math.random();
 
-        if ((.1 > random > 0) && (arr[0][0] == 0 || arr[0][1] == 0  || arr[0][2] == 0  || arr[0][3] == 0  || arr[0][4] == 0  || arr[0][5] == 0  || arr[0][6] == 0  || arr[0][7] == 0) { 
+        if ((.1 > random > 0) && (arr[0][0] == 0 || arr[0][1] == 0  || arr[0][2] == 0  || arr[0][3] == 0  || arr[0][4] == 0  || arr[0][5] == 0  || arr[0][6] == 0  || arr[0][7] == 0)) { 
 
             if (arr[0][0] == 0) && (.125 > Math.random() > 0) { 
                 if (Math.random() > .5) {
