--- a/restructuring2.html
+++ b/restructuring2.html
@@ -267,7 +267,8 @@
 
         if ((.1 > random > 0) && (arr[0][0] == 0 || arr[0][1] == 0  || arr[0][2] == 0  || arr[0][3] == 0  || arr[0][4] == 0  || arr[0][5] == 0  || arr[0][6] == 0  || arr[0][7] == 0)) { 
 
-            if (arr[0][0] == 0) && (.125 > Math.random() > 0) { 
+            if ((arr[0][0] == 0) && (.125 > Math.random() > 0)) 
+            { 
                 if (Math.random() > .5) {
                     tile1x1.src = putin_tile + "0-0.png";
                     arr[0][0] = "p";
@@ -276,7 +277,7 @@
                     arr[0][0] = "t";
                 }
             }
-            else if (arr[0][1] == 0) && (.25 > Math.random() > .125) 
+            else if ((arr[0][1] == 0) && (.25 > Math.random() > .125)) 
             { 
                 if (Math.random() > .5) {
                     tile1x2.src = putin_tile + "0-1.png";
@@ -286,7 +287,7 @@
                     arr[0][1] = "t";
                 }
             }
-            else if (arr[0][2] == 0) && (.375 > Math.random() > .25)
+            else if ((arr[0][2] == 0) && (.375 > Math.random() > .25))
             { 
                 if (Math.random() > .5) {
                     tile1x3.src = putin_tile + "0-2.png";
@@ -296,7 +297,7 @@
                     arr[0][2] = "t";
                 }
             }
-            else if (arr[0][3] == 0) && (.5 > Math.random() > .375)
+            else if ((arr[0][3] == 0) && (.5 > Math.random() > .375))
             { 
                 if (Math.random() > .5) {
                     tile1x4.src = putin_tile + "0-3.png";
@@ -306,7 +307,7 @@
                     arr[0][3] = "t";
                 }
             }
-            else if (arr[0][4] == 0) && (.625 > Math.random() > .5)
+            else if ((arr[0][4] == 0) && (.625 > Math.random() > .5))
             { 
                 if (Math.random() > .5) {
                     tile1x5.src = putin_tile + "0-4.png";
@@ -316,7 +317,7 @@
                     arr[0][4] = "t";
                 }
             }
-            else if (arr[0][5] == 0) && (.75 > Math.random() > .625)
+            else if ((arr[0][5] == 0) && (.75 > Math.random() > .625))
             { 
                 if (Math.random() > .5) {
                     tile1x6.src = putin_tile + "0-5.png";
@@ -326,7 +327,7 @@
                     arr[0][5] = "t";
                 }
             }
-            else if (arr[0][6] == 0) && (.875 > Math.random() > .75)
+            else if ((arr[0][6] == 0) && (.875 > Math.random() > .75))
             { 
                 if (Math.random() > .5) {
                     tile1x7.src = putin_tile + "0-6.png";
@@ -336,7 +337,7 @@
                     arr[0][6] = "t";
                 }
             }
-            else if (arr[0][7] == 0) && (1 > Math.random() > .875)
+            else if ((arr[0][7] == 0) && (1 > Math.random() > .875))
             { 
                 if (Math.random() > .5) {
                     tile1x8.src = putin_tile + "0-7.png";
