--- a/design.html
+++ b/design.html
@@ -41,26 +41,26 @@
 
     <div id="content" class="row col-lg-offset-3 col-md-offset-3 col-lg-9 col-md-9 col-sm-12 col-xs-12">
       <div class="col-lg-6 col-md-6 col-sm-12 col-xs-12">
-        <a target="_blank" href="">
+        <a target="_blank" href="https://www.behance.net/gallery/55248897/JusticeHub-logo">
           <img class="artdesign" src="/images/Justice_Hub_logo_v3_longbar_rbp.png" style="">
         </a>
       </div>
 
       <div class="col-lg-6 col-md-6 col-sm-12 col-xs-12">
-        <p class="annotation">Logo<a href=""></a></p>
+        <p class="annotation"><a href=""></a></p>
         <p class=""><a href=""></a></p>
       </div>
     </div>
 
     <div id="content" class="row col-lg-offset-3 col-md-offset-3 col-lg-9 col-md-9 col-sm-12 col-xs-12">
       <div class="col-lg-6 col-md-6 col-sm-12 col-xs-12">
-        <a target="_blank" href="/images/artdesign_fullsize/rain_snow_or_fog_2_page_full_no_logo.jpg">
+        <a target="_blank" href="">
           <img class="artdesign" src="/images/rain_snow_or_fog_2_page_full_no_logo.jpg" style="">
         </a>
       </div>
 
       <div class="col-lg-6 col-md-6 col-sm-12 col-xs-12">
-        <p class="annotation">Campaign<a href=""></a></p>
+        <p class="annotation"><a href=""></a></p>
         <p class=""><a href=""></a></p>
       </div>
     </div>
@@ -73,33 +73,33 @@
       </div>
 
       <div class="col-lg-6 col-md-6 col-sm-12 col-xs-12">
-        <p class="annotation">Logo<a href=""></a></p>
+        <p class="annotation"><a href=""></a></p>
         <p class=""><a href=""></a></p>
       </div>
     </div>
 
     <div id="content" class="row col-lg-offset-3 col-md-offset-3 col-lg-9 col-md-9 col-sm-12 col-xs-12">
       <div class="col-lg-6 col-md-6 col-sm-12 col-xs-12">
-        <a target="_blank" href="/images/artdesign_fullsize/wimbledon_woodworks_1.jpg">
+        <a target="_blank" href="">
           <img class="artdesign" src="/images/wimbledon_woodworks_1.jpg" style="">
         </a>
       </div>
 
       <div class="col-lg-6 col-md-6 col-sm-12 col-xs-12">
-        <p class="annotation">Logo<a href=""></a></p>
+        <p class="annotation"><a href=""></a></p>
         <p class=""><a href=""></a></p>
       </div>
     </div>
 
     <div id="content" class="row col-lg-offset-3 col-md-offset-3 col-lg-9 col-md-9 col-sm-12 col-xs-12">
       <div class="col-lg-6 col-md-6 col-sm-12 col-xs-12">
-        <a target="_blank" href="/images/artdesign_fullsize/open_city_cover_square.jpg">
+        <a target="_blank" href="https://www.behance.net/gallery/54896309/Open-City-book-cover">
           <img class="artdesign" src="/images/open_city_cover_square.jpg" style="">
         </a>
       </div>
 
       <div class="col-lg-6 col-md-6 col-sm-12 col-xs-12">
-        <p class="annotation">Book cover<a href=""></a></p>
+        <p class="annotation"><a href=""></a></p>
         <p class=""><a href=""></a></p>
       </div>
     </div>
@@ -112,34 +112,34 @@
       </div>
 
       <div class="col-lg-6 col-md-6 col-sm-12 col-xs-12">
-        <p class="annotation">Business card template<a href=""></a></p>
+        <p class="annotation"><a href=""></a></p>
         <p class=""><a href=""></a></p>
       </div>
     </div>
 
     <div id="content" class="row col-lg-offset-3 col-md-offset-3 col-lg-9 col-md-9 col-sm-12 col-xs-12">
       <div class="col-lg-6 col-md-6 col-sm-12 col-xs-12">
-        <a href="/images/artdesign_fullsize/wccc_square.jpg">
+        <a href="https://www.behance.net/gallery/55052197/Coffee-company-logo">
           <img target="_blank" class="artdesign" src="/images/wccc_square.jpg" style="">
         </a>
       </div>
 
       <div class="col-lg-6 col-md-6 col-sm-12 col-xs-12">
         <p class="annotation"><a href=""></a></p>
-        <p class="">Logo<a href=""></a></p>
+        <p class=""><a href=""></a></p>
       </div>
     </div>
 
     <div id="content" class="row col-lg-offset-3 col-md-offset-3 col-lg-9 col-md-9 col-sm-12 col-xs-12">
       <div class="col-lg-6 col-md-6 col-sm-12 col-xs-12">
-        <a target="_blank" href="/images/artdesign_fullsize/wccc_logo_serif_brnz.jpg">
+        <a target="_blank" href="https://www.behance.net/gallery/55052197/Coffee-company-logo">
           <img class="artdesign" src="/images/wccc_logo_serif_brnz.jpg" style="">
         </a>
       </div>
 
       <div class="col-lg-6 col-md-6 col-sm-12 col-xs-12">
         <p class="annotation"><a href=""></a></p>
-        <p class="">Logo<a href=""></a></p>
+        <p class=""><a href=""></a></p>
       </div>
     </div>
 
