--- a/design.html
+++ b/design.html
@@ -144,7 +144,7 @@
     </div>
 
     <div id="content" class="row col-lg-offset-3 col-md-offset-3 col-lg-9 col-md-9 col-sm-12 col-xs-12">
-      <p class="col-lg-9 copyright">Copyright notice: All art and design copyright Pavlo Chubinskiy &copy;</p>
+      <p style="font-size: 11px;" class="col-lg-9 copyright">Copyright notice: all art and design copyright Paul Chubinskiy&copy;</p>
     </div>
 
     <script type="text/javascript" src="//code.jquery.com/jquery-2.2.0.min.js"></script>
